--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },,
+  },
   "dependencies": {
     "gatsby": "^2.18.8",
     "gatsby-plugin-sass": "^2.1.26",
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/RemyBordignon/RemyBordignon.github.io"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
