--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "remybordignon",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "my page",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -29,8 +29,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/RemyBordignon/RemyBordignon.github.io"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
